# finance-tracker-web

./: .env.example  .gitignore  compose.yaml
.github/workflows/: backend-ci.yml
backend/: .dockerignore  .gitignore  Dockerfile  pyproject.toml  pytest.ini
backend/config/: settings.py  urls.py
backend/finance/: models.py  serializers.py  urls.py  views.py
backend/finance/migrations/: 0001_initial.py
backend/tests/: conftest.py  test_api.py
frontend/: Dockerfile
