[project]
name = "backend"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "YuHsuan", email = "c.yuhsuann@gmail.com"},
]
dependencies = ["django>=6.0.5", "djangorestframework>=3.17.1", "psycopg2-binary>=2.9.12", "python-dotenv>=1.2.2", "django-cors-headers>=4.9.0", "djangorestframework-simplejwt>=5.5.1", "django-filter>=25.2"]
requires-python = "==3.12.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-django>=4.12.0",
]
